--- a/style.css
+++ b/style.css
@@ -119,6 +119,8 @@ a.info-box{
       height:  40px; 
 }
 
+/*info box full*/
+
 #info-box-full{
       background-color : rgba(255, 255, 255, .8) ;
       width   : 90%;
